# PHiLiP

src/dg/: dg.cpp  dg.h  dg_base.cpp  weak_dg.cpp
src/flow_solver/: flow_solver.cpp  flow_solver_factory.cpp
src/flow_solver/flow_solver_cases/: naca0012.cpp  non_periodic_cube_flow.cpp  non_periodic_cube_flow.h
src/functional/: CMakeLists.txt  cell_distortion_functional.cpp  cell_distortion_functional.h  cell_volume_objective_function.cpp  cell_volume_objective_function.h  direct_goal_oriented_error.cpp  direct_goal_oriented_error.h  dual_weighted_residual_obj_func.cpp  dual_weighted_residual_obj_func.h  dual_weighted_residual_obj_func2.cpp  dual_weighted_residual_obj_func2.h  dual_weighted_residual_obj_func3.cpp  dual_weighted_residual_obj_func3.h  full_space_optimization.cpp  full_space_optimization.h  functional.cpp  functional.h  generate_triangulation.cpp  generate_triangulation.h  implicit_shocktracking_functional.cpp  implicit_shocktracking_functional.h  objective_function_for_mesh_adaptation.cpp  objective_function_for_mesh_adaptation.h  reduced_space_optimization.cpp  reduced_space_optimization.h  target_jacdet_functional.cpp  target_jacdet_functional.h  total_derivatives_of_objective_function.cpp  total_derivatives_of_objective_function.h
src/mesh/: CMakeLists.txt  mesh_adaptation.cpp  mesh_adaptation.h  mesh_error_estimate.cpp  mesh_error_estimate.h
src/mesh/error_indicators_for_mesh_adaptation/: CMakeLists.txt  direct_goal_oriented_error.cpp  direct_goal_oriented_error.h  dual_weighted_residual.cpp  dual_weighted_residual.h  mesh_error_estimate_base.cpp  mesh_error_estimate_base.h  mesh_error_factory.h  residual_based_error_indicator.cpp  residual_based_error_indicator.h
src/mesh/mesh_adaptation/: anisotropic_mesh_adaptation.cpp  anisotropic_mesh_adaptation.h  mesh_error_estimate.cpp  mesh_optimizer.cpp  mesh_optimizer.hpp  metric_to_mesh_generator.cpp
src/numerical_flux/: convective_numerical_flux.cpp
src/ode_solver/: implicit_ode_solver.cpp  ode_solver_base.cpp
src/optimization/: CMakeLists.txt  flow_constraints.cpp  flow_constraints.hpp  full_space_step.cpp  full_space_step.hpp  kkt_birosghattas_preconditioners.hpp  rol_objective.cpp
src/optimization/design_parameterization/: CMakeLists.txt  base_parameterization.cpp  base_parameterization.hpp  inner_vol_parameterization.cpp  metric_parameterization.cpp  metric_parameterization.hpp  sliding_boundary_parameterization.cpp  specific_nodes_parameterization.cpp  specific_nodes_parameterization.hpp  unit_vector_parameterization.cpp  unit_vector_parameterization.hpp
src/optimization/shape_optimization/: CMakeLists.txt  flow_constraints.cpp
src/parameters/: all_parameters.cpp  all_parameters.h  parameters_flow_solver.cpp  parameters_flow_solver.h  parameters_manufactured_solution.cpp  parameters_manufactured_solution.h  parameters_optimization.cpp  parameters_optimization.h
src/physics/: convection_diffusion.cpp  euler.cpp  euler.h  manufactured_solution.cpp  manufactured_solution.h  physics.cpp  physics.h
src/physics/initial_conditions/: initial_condition.cpp  initial_condition_function.cpp
src/testing/: CMakeLists.txt  anisotropic_mesh_adaptation_cases.cpp  anisotropic_mesh_adaptation_cases.h  dual_weighted_residual_mesh_adaptation.cpp  euler_bump_optimization.cpp  euler_naca0012_optimization.cpp  goal_oriented_mesh_optimization.cpp  goal_oriented_mesh_optimization.h  mesh_r_adaptation.cpp  mesh_r_adaptation.h  tests.cpp
tests/integration_tests_control_files/euler_integration/: 2d_euler_gaussian_bump_with_artificial_dissipation_laplacian_residual_convergence_test.prm
tests/integration_tests_control_files/grid_refinement/: 2d_sshock_dual_weighted_residual_convergence.prm  CMakeLists.txt  anisotropic_mesh_adaptation_euler.prm  anisotropic_mesh_adaptation_sshock.prm  atan_full_space_goal_oriented_mesh_optimization.prm  atan_reduced_space_goal_oriented_mesh_optimization.prm  boundary_layer_full_space_goal_oriented_mesh_optimization.prm  boundary_layer_reduced_space_goal_oriented_mesh_optimization.prm  fixedfraction_10_10_shocktracking.prm  fixedfraction_10_11_shocktracking.prm  fixedfraction_10_12_shocktracking.prm  fixedfraction_10_13_shocktracking.prm  fixedfraction_10_14_shocktracking.prm  fixedfraction_10_15_shocktracking.prm  fixedfraction_10_16_shocktracking.prm  fixedfraction_10_17_shocktracking.prm  fixedfraction_10_1_shocktracking.prm  fixedfraction_10_2_shocktracking.prm  fixedfraction_10_3_shocktracking.prm  fixedfraction_10_4_shocktracking.prm  fixedfraction_10_5_shocktracking.prm  fixedfraction_10_6_shocktracking.prm  fixedfraction_10_7_shocktracking.prm  fixedfraction_10_8_shocktracking.prm  fixedfraction_10_9_shocktracking.prm  fixedfraction_10_shocktracking.prm  fixedfraction_20_10_shocktracking.prm  fixedfraction_20_1_shocktracking.prm  fixedfraction_20_2_shocktracking.prm  fixedfraction_20_3_shocktracking.prm  fixedfraction_20_4_shocktracking.prm  fixedfraction_20_5_shocktracking.prm  fixedfraction_20_6_shocktracking.prm  fixedfraction_20_7_shocktracking.prm  fixedfraction_20_8_shocktracking.prm  fixedfraction_20_9_shocktracking.prm  fixedfraction_30_1_shocktracking.prm  fixedfraction_30_2_shocktracking.prm  fixedfraction_30_3_shocktracking.prm  fixedfraction_30_4_shocktracking.prm  (+21 more)
tests/meshes/: CMakeLists.txt  square_geofile.geo  supersonic_vortex.geo
tests/unit_tests/functional_derivatives/: CMakeLists.txt  dual_weighted_residual_derivative_check.cpp  taylor_expanded_functional_derivative.cpp
tests/unit_tests/optimization/: flow_constraints_check.cpp  objective_check.cpp
tests/unit_tests/sensitivities/: CMakeLists.txt  goal_oriented_error_derivative_with_ad.cpp
